<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    tools:context=".view.MainActivity">

    <data>
        <import type="com.king.dexmorphhunter.viewmodel.MyViewModel" />
        <variable
            name="viewModel"
            type="MyViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/app_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/recyclerView">

            <Switch
                android:id="@+id/intercepted_apps_switch"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/intercepted_apps"
                android:checked="@{viewModel.interceptedAppsSwitchChecked}"
                android:onCheckedChanged="@{(buttonView, isChecked) -> viewModel.onInterceptedAppsSwitchCheckedChanged(isChecked)}"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/system_apps_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/system_apps"
                android:checked="@{viewModel.systemAppsSwitchChecked}"
                android:onCheckedChanged="@{(buttonView, isChecked) -> viewModel.onSystemAppsSwitchCheckedChanged(isChecked)}"
                tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="8dp"/>
    </LinearLayout>
</layout>
